# TextBlazeToEspanso

./: README.md  __init__.py  __main__.py  converter.py  index.html  pyproject.toml  requirements.txt  settings.py
_layouts/: default.html
textblaze_to_espanso/: __init__.py
