[project]
name = "textblaze_to_espanso"
version = "0.0.1"
authors = [
    { name = "makeyouswag" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
py-modules = []

[project.urls]
Homepage = "https://github.com/makeyouswag/TextBlazeToEspanso/"
Issues = "https://github.com/makeyouswag/TextBlazeToEspanso/issues"